# ParkingLot

./: .gitignore  CMakeLists.txt  main.cpp  single_file_version.cpp
parkinglot/level/: Level.h
parkinglot/lot/: ParkingLot.h
parkinglot/spot/: Spot.h  SpotType.h
parkinglot/strategy/: SequentialStrategy.h
parkinglot/ticket/: Ticket.h
parkinglot/vehicle/: Vehicle.h  VehicleType.h
